crates/rtd/src/client_ptb/snapshots/sui__client_ptb__lexer__tests__unexpected_colon.snap
---
source: crates/rtd/src/client_ptb/lexer.rs
expression: tokens
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 5,
        },
        value: Lexeme(
            Ident,
            "hello",
        ),
    },
    Spanned {
        span: Span {
            start: 5,
            end: 6,
        },
        value: Lexeme(
            Unexpected,
            ":",
        ),
    },
]
