crates/rtd/src/client_ptb/snapshots/sui__client_ptb__lexer__tests__unexpected_publish_trailing.snap
---
source: crates/rtd/src/client_ptb/lexer.rs
expression: tokens
---
[
    Spanned {
        span: Span {
            start: 9,
            end: 10,
        },
        value: Lexeme(
            Unexpected,
            " ",
        ),
    },
]
